--- a/.gitignore
+++ b/.gitignore
@@ -329,4 +329,4 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 
-ide/vs2017/LearningToSeeInTheDark/Model/*
+weights/inception_resnet_weights.h5
