--- a/applications/Nima/app/build.gradle
+++ b/applications/Nima/app/build.gradle
@@ -23,8 +23,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation 'com.android.support:recyclerview-v7:26.+'
 }
